chnages in logo and footer

--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -174,10 +174,10 @@ button.boxed-btn {
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-						<!--	<a href="{% url 'index' %}"> -->
-								<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-							</a>
-						</div>
+                            <!--	<a href="{% url 'index' %}"> -->
+                                <a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+                                </a>
+                            </div>
 						<!-- logo -->
 
 						<!-- menu start -->
