--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -171,10 +171,9 @@ ul li a:hover {
 					<div class="main-menu-wrap">
 							<!-- logo -->
 							<div class="site-logo">
-							<!--	<a href="{% url 'Games' %}"> -->
-									<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-								</a>
-							</div>
+									<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+									</a>
+								</div>
 							<!-- logo -->
 	
 							<!-- menu start -->
