--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -52,9 +52,7 @@
 
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */}
-	.footer-area {
-  padding: 120px 0px;
-}
+
 	</style>
 
 
@@ -77,8 +75,7 @@
 						<div class="main-menu-wrap">
 							<!-- logo -->
 							<div class="site-logo">
-							<!--	<a href="{% url 'Games' %}"> -->
-									<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+								<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 								</a>
 							</div>
 							<!-- logo -->
