--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -52,9 +52,6 @@
 
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */}
-	.footer-area {
-  padding: 120px 0px;
-}
 		div img{
 		margin-left:10%}
 
@@ -80,7 +77,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 						<!--	<a href="{% url 'index' %}"> -->
-								<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+							<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 							</a>
 						</div>
 
@@ -243,7 +240,7 @@
 						<h2>We are <span class="pink-text">Game Geek</span></h2>
 						<p>Game Geek is a platform that offers multiple in-app video games for different age groups. In Game Geek we prioritize our user's safety. Therefore, we aim to help users find video games that suit their age group. </p>
 
-						<a href="{% url 'about' %}" class="boxed-btn mt-4">know more</a>
+						<!--<a href="{% url 'about' %}" class="boxed-btn mt-4">know more</a>-->
 					</div>
 				</div>
 			</div>
