--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -54,9 +54,6 @@
 
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */}
-	.footer-area {
-  padding: 120px 0px;
-}
 .back{
 height:100%;
 margin:0;
@@ -159,10 +156,9 @@ background: linear-gradient(95deg, rgba(21,232,237,1) 0%, rgba(168,168,168,0.020
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-						<!--	<a href="{% url 'index' %}"> -->
-								<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-							</a>
-						</div>
+								<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+								</a>
+							</div>
 						<!-- logo -->
 
 						<!-- menu start -->
