--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -55,9 +55,6 @@
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */
        }
-		.footer-area {
-  padding: 120px 0px;
-}
 
 		.profile-section {
     display: flex;
@@ -113,8 +110,7 @@ background: linear-gradient(95deg, rgba(21,232,237,0.6503195028011204) 0%, rgba(
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-						<!--	<a href="{% url 'index' %}"> -->
-								<img src="{% static 'img/Games/GameGeek.png' %}"alt="logo">
+							<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 							</a>
 						</div>
 						<!-- logo -->
