--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -53,9 +53,6 @@
 
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */}
-	.footer-area {
-  padding: 120px 0px;
-}
 .back{
 height:100%;
 margin:0;
@@ -173,10 +170,9 @@ padding:10px;
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-						<!--	<a href="{% url 'index' %}"> -->
-								<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-							</a>
-						</div>
+								<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+								</a>
+							</div>
 						<!-- logo -->
 
 						<!-- menu start -->
