--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -56,9 +56,6 @@
 			font-weight:500;
 			text-decoration: none;
 		}
-		.footer-area {
-  padding: 120px 0px;
-}
 
 	</style>
 </head>
@@ -80,8 +77,7 @@
 					<div class="main-menu-wrap">
 							<!-- logo -->
 							<div class="site-logo">
-							<!--	<a href="{% url 'Games' %}"> -->
-									<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+								<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 								</a>
 							</div>
 							<!-- logo -->
@@ -172,7 +168,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta sint dignissimos, rem commodi cum voluptatem quae reprehenderit repudiandae ea tempora incidunt ipsa, quisquam animi perferendis eos eum modi! Tempora, earum.</p>
 						<div class="single-product-form">
 						
-							<p><strong>Genre: </strong>Action, Game</p>
+							<p><strong>Genre: </strong>Action, Strategy</p>
 
 							<a href="#" class="cart-btn" id="favBtn"><i class="fas fa-regular fa-heart"></i> <span id="favText">Add to Favourite Games</span></a>
 							<a href="javascript:void(0);" class="cart-btn" id="copyBtn"><i class="fas fa-solid fa-link"></i><span id="copyText">Go to The Download Page!</span></a>
