--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -85,8 +85,7 @@
 					<div class="main-menu-wrap">
 							<!-- logo -->
 							<div class="site-logo">
-							<!--	<a href="{% url 'Games' %}"> -->
-									<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+								<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 								</a>
 							</div>
 							<!-- logo -->
