--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -114,8 +114,6 @@
 						<nav class="main-menu">
 							<ul>
 
-							
-							
 								<li>
 									<div class="header-icons">
 									
@@ -138,7 +136,7 @@
 	<!-- end search area -->
 
 	<!-- hero area -->
-	<div class="hero-area hero-bg">
+	<div class="hero-area hero-bg" style="background-size: 120%;">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-9 offset-lg-2 text-center">
