--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -14,8 +14,8 @@
 	<!-- title -->
 	<title>Age estimations</title>
 	<!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/Games/GGicon.png' %}">
 
-	<link rel="shortcut icon" type="image/png" href="{% static 'img/Games/GGicon.png' %}">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -165,6 +165,14 @@ button.boxed-btn {
 }
     </style>
 <body>
+
+    	<!--PreLoader-->
+        <div class="loader">
+            <div class="loader-inner">
+                <div class="circle"></div>
+            </div>
+        </div>
+        <!--PreLoader Ends-->
 
 	<!-- header -->
 <div class="top-header-area" id="sticker">
