--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -194,7 +194,7 @@ ul li a:hover {
 								<li>
 									<div class="header-icons">
 									
-										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}" style="text-decoration: none;">Logout</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}" style="text-decoration: none;">Log Out</a>
 									</div>
 								</li>
 							</ul>
