--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -127,7 +127,7 @@
 									<li>
 										<div class="header-icons">
 										
-											<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Logout</a>
+											<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Log Out</a>
 										</div>
 									</li>
 								</ul>
