modifying sign-up

--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -160,7 +160,7 @@
 							  
 							  
 							<div class="hero-btns">
-								<a href="{% url 'signup' %}" class="boxed-btn">Join Us</a>
+								<a href="{% url 'signup' %}" class="boxed-btn">Join US</a>
 								
 							</div>
 						</div>
