--- a/FrontEnd/static/css/main.css
+++ b/FrontEnd/static/css/main.css
@@ -859,6 +859,7 @@ a.mobile-show {
 #login-btn {
   color:#F9F9F9;
   font-family: 'Poppins', sans-serif;
+  font-size: 20px;
 }
 .black{
 color:#5b5b5b;
