adding profile.html

--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -267,7 +267,7 @@
 								<li>
 									<div class="header-icons">
 									
-										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Log Out</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}" style="font-size: 20px;">Log Out</a>
 									</div>
 								</li>
 							</ul>
