--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -169,7 +169,7 @@ background: linear-gradient(95deg, rgba(21,232,237,1) 0%, rgba(168,168,168,0.020
 									<li>
 										<div class="header-icons">
 
-										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Home</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}" style="font-size: 20px;">Home</a>
 									</div>
 									</li>
 								</li>
