--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -37,17 +37,19 @@
 
 		<style>
 
-  /************/
+  /************************************/
  body{
-	background-color: #f1f1f1 ;
+    background-color: #fff;
   }
   .profile-sec {
-    background-color: #fff;
+    background-color: #f1f1f1 ;
     padding: 20px;
     display: flex;
     justify-content: center;
-    margin-left: 20%; /* Adjust the left margin for responsiveness */
-    margin-right: 20%; /* Adjust the right margin for responsiveness */
+    margin:10% auto;
+    width:50%;
+    border-radius: 15px;
+
 
 }
 
@@ -58,7 +60,7 @@
     max-width: 50%; /* Limit maximum width for two containers side by side */
     display: flex; /* Display as a flex container */
     flex-wrap: wrap; /* Allow content to wrap within the container */
-    background-color: #fff; /* Background color for the entire container */
+    background-color: #f1f1f1; /* Background color for the entire container */
     border-radius: 3%; /* Border radius for the entire container */
 }
 
@@ -69,20 +71,24 @@
 
 .labels-container {
     order: 3; /* Set the order to 2 to place it on the right */
-    background-color: #fff;
+    background-color: #f1f1f1 ;
     border-radius: 0 3% 3% 0; /* Apply different radius on the left */
     margin-right: 0; /* Remove right margin */
 	margin-left: 6%;
+	    box-shadow: none;
+
 
 }
 
 .user-info-container {
     order: 1; /* Set the order to 1 to place it on the left */
-    background-color: #fff;
+    background-color: #f1f1f1 ;
     border-radius: 3% 0 0 3%; /* Apply different radius on the right */
     margin-left: 0; /* Remove left margin */
-	padding-top: 5%;
+	padding-top: 20%;
 	padding-left: 5%;
+	    box-shadow: none;
+
 
 }
 
@@ -109,6 +115,12 @@
   margin-bottom: 10px; /* Add space between input containers */
 
 }
+.input-container-read {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px; /* Add space between input containers */
+
+}
 
 .input-container input {
   border: none !important;
@@ -117,19 +129,38 @@ height: 40px; /* Increase the input height */
 color: #ff069a; /* Set the text color */
 font-weight: bolder;
 background: transparent; /* Remove the background color */
-background-color: #cfcfcf28;
+background-color: #fff;
 font-size: larger;
 border-bottom: 1px solid #0505056c !important; /* Add a 2px solid bottom border with the specified color */
-/* Add any other desired styling for the input elements */
 border-radius: 3%;
-cursor: not-allowed;
-outline: none;
-
 
 }
 
+.input-container-read input {
+  border: none !important;
+width: 100%; /* Make the input wider */
+height: 40px; /* Increase the input height */
+color: #ff069a; /* Set the text color */
+font-weight: bolder;
+background: transparent; /* Remove the background color */
+background-color: #f1f1f1;
+font-size: larger;
+border-radius: 3%;
+cursor: not-allowed;
+outline: none;
+}
+
+    .input-container-read label {
+        width: 350px;
+        font-weight: bolder;
+        margin-right: 10px;
+        font-size: larger;
+
+
+    }
+
     .input-container label {
-        width: 150px;
+        width: 350px;
         font-weight: bolder;
         margin-right: 10px;
         font-size: larger;
@@ -227,7 +258,7 @@ outline: none;
 								<li>
 									<div class="header-icons">
 
-										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Log Out</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Logout</a>
 									</div>
 								</li>
 							</ul>
@@ -250,8 +281,12 @@ outline: none;
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2 text-center">
                         <div class="breadcrumb-text">
-                            <p></p>
                             <h1>Profile</h1>
+							 <p>
+								 <span class="blue" >Gamer's</span>
+								 <span class="black"> information</span>
+							 </p>
+
                         </div>
                     </div>
                 </div>
@@ -260,6 +295,7 @@ outline: none;
         <!-- end breadcrumb section -->
 
 
+<br>
 
 
 				<div class="profile-sec">
@@ -267,21 +303,22 @@ outline: none;
 				<div class="profile-container labels-container">
 
 					<div class="input-container">
-						<label for="username" style="font-weight: bolder;">Username:</label>
-						<input type="text" id="username" name="username" value="Sara" readonly>
+						<label for="Fname" style="font-weight: bolder;">First Name:</label>
+						<input type="text" id="Fname" name="Fname" value="Sarah">
 					</div>
 
 						<div class="input-container">
-						<label for="age-group" style="font-weight: bolder;">Age group:</label>
-						<input type="text" id="age-group" name="age-group" value="12+" readonly>
+						<label for="Lname" style="font-weight: bolder;">Last Name:</label>
+						<input type="text" id="Lname" name="Lname" value="Ali" >
+
 					</div>
 
-					<div class="input-container">
+					<div class="input-container-read">
 						<label for="email" style="font-weight: bolder;">Email:</label>
 						<input type="text" id="email" name="email" value="sarah@example.com" readonly>
 					</div>
 
-					<div class="input-container">
+					<div class="input-container-read">
 						<label for="joined-on" style="font-weight: bolder;">Date joined:</label>
 						<input type="text" id="joined-on" name="joined-on" value="10/10/2023" readonly>
 					</div>
@@ -292,8 +329,8 @@ outline: none;
 					<div class="list-box d-flex flex-column align-items-center" style="margin-left: 1%;">
 
 						<div class="content">
-						 <label  style="font-size:150%; font-weight: bolder;">Sara</label>
-						 <h5 class="pink-text">12+</h5>
+						 <label  style="font-size:230%; font-weight: bolder; margin:auto;">Sarah</label>
+						 <h4 class="pink-text">12+</h4>
 						</div>
 					</div>
 				</div>
