--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -39,27 +39,41 @@
 
   /************/
  body{
-	background-color: #f1f1f1 ;
-  }
-  .profile-sec {
     background-color: #fff;
+  }
+.profile-sec {
+    background-color: #f1f1f1;
     padding: 20px;
     display: flex;
-    justify-content: center;
-    margin-left: 20%; /* Adjust the left margin for responsiveness */
-    margin-right: 20%; /* Adjust the right margin for responsiveness */
-
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Center the content vertically */
+    margin: 0 auto; /* Center the section horizontally */
+    max-width: 50%; /* Limit maximum width for two containers side by side */
+    border-radius: 3%;
 }
 
 .profile-container {
     text-align: center;
     padding: 20px;
-    width: auto; /* Responsive width */
-    max-width: 50%; /* Limit maximum width for two containers side by side */
-    display: flex; /* Display as a flex container */
-    flex-wrap: wrap; /* Allow content to wrap within the container */
-    background-color: #fff; /* Background color for the entire container */
-    border-radius: 3%; /* Border radius for the entire container */
+    margin: 0 auto; /* Center the container horizontally */
+    width: 100%; /* Take up the full width of the parent container */
+    max-width: 500px; /* Limit the maximum width for readability */
+    background-color: #f1f1f1;
+    border-radius: 3%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Center the content vertically */
+}
+
+/* Your styles for the content inside each profile container */
+.input-container, .input-container-read {
+    width: 100%; /* Make the content take up the full width */
+    text-align: left; /* Adjust text alignment as needed */
+}
+
+.input-container input, .input-container-read input {
+    width: 100%;
 }
 
 
@@ -69,20 +83,23 @@
 
 .labels-container {
     order: 3; /* Set the order to 2 to place it on the right */
-    background-color: #fff;
+    background-color: #f1f1f1 ;
     border-radius: 0 3% 3% 0; /* Apply different radius on the left */
     margin-right: 0; /* Remove right margin */
-	margin-left: 6%;
+	    box-shadow: none;
+
 
 }
 
 .user-info-container {
     order: 1; /* Set the order to 1 to place it on the left */
-    background-color: #fff;
+    background-color: #f1f1f1 ;
     border-radius: 3% 0 0 3%; /* Apply different radius on the right */
     margin-left: 0; /* Remove left margin */
 	padding-top: 5%;
-	padding-left: 5%;
+	padding-left: 2%;
+	    box-shadow: none;
+
 
 }
 
@@ -109,24 +126,47 @@
   margin-bottom: 10px; /* Add space between input containers */
 
 }
-
-.input-container input {
-  border: none !important;
-width: 100%; /* Make the input wider */
-height: 40px; /* Increase the input height */
-color: #ff069a; /* Set the text color */
-font-weight: bolder;
-background: transparent; /* Remove the background color */
-background-color: #cfcfcf28;
-font-size: larger;
-border-bottom: 1px solid #0505056c !important; /* Add a 2px solid bottom border with the specified color */
-/* Add any other desired styling for the input elements */
-border-radius: 3%;
-cursor: not-allowed;
-outline: none;
-
+.input-container-read {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px; /* Add space between input containers */
 
 }
+
+.input-container input {
+    width: 100%; /* Make the input elements take up the full width */
+    height: 40px;
+    color: #ff069a;
+    font-weight: bolder;
+    background-color: #fff;
+    font-size: larger;
+    border: none; /* Remove the border */
+    border-bottom: 1px solid #0505056c !important;
+    border-radius: 3%;
+}
+
+
+.input-container-read input {
+    width: 100%; /* Make the input elements take up the full width */
+    height: 40px;
+    color: #ff069a;
+    font-weight: bolder;
+    background: transparent;
+    font-size: larger;
+    border: none; /* Remove the border */
+    background-color: #f1f1f1; /* Background color for read-only input */
+    border-radius: 3%;
+    cursor: not-allowed; /* Change cursor to prohibited sign */
+    outline: none; /* Remove the outline when focused */
+}
+
+
+    .input-container-read label {
+        width: 150px;
+        font-weight: bolder;
+        margin-right: 10px;
+        font-size: larger;
+    }
 
     .input-container label {
         width: 150px;
@@ -152,7 +192,7 @@ outline: none;
     width: 1px; /* Width of the vertical line */
     background-color: #ff069a; /* Color of the vertical line */
     margin: 0 ;
-	margin-left: 7%;
+	margin-right: 10%;
 }
 	</style>
 
@@ -227,7 +267,7 @@ outline: none;
 								<li>
 									<div class="header-icons">
 
-										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Log Out</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Logout</a>
 									</div>
 								</li>
 							</ul>
@@ -250,8 +290,11 @@ outline: none;
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2 text-center">
                         <div class="breadcrumb-text">
-                            <p></p>
                             <h1>Profile</h1>
+							<p>
+							<span class="blue">Gamer's</span>
+							<span class="pink">information</span>
+						</p>
                         </div>
                     </div>
                 </div>
@@ -260,6 +303,7 @@ outline: none;
         <!-- end breadcrumb section -->
 
 
+<br>
 
 
 				<div class="profile-sec">
@@ -267,21 +311,22 @@ outline: none;
 				<div class="profile-container labels-container">
 
 					<div class="input-container">
-						<label for="username" style="font-weight: bolder;">Username:</label>
-						<input type="text" id="username" name="username" value="Sara" readonly>
+						<label for="Fname" style="font-weight: bolder;">First Name:</label>
+						<input type="text" id="Fname" name="Fname" value="Sarah">
 					</div>
 
 						<div class="input-container">
-						<label for="age-group" style="font-weight: bolder;">Age group:</label>
-						<input type="text" id="age-group" name="age-group" value="12+" readonly>
+						<label for="Lname" style="font-weight: bolder;">Last Name:</label>
+						<input type="text" id="Lname" name="Lname" value="Ali" >
+
 					</div>
 
-					<div class="input-container">
+					<div class="input-container-read">
 						<label for="email" style="font-weight: bolder;">Email:</label>
-						<input type="text" id="email" name="email" value="sarah@example.com" readonly>
+						<input type="text" id="email" name="email" value="sarah@mail.com" readonly>
 					</div>
 
-					<div class="input-container">
+					<div class="input-container-read">
 						<label for="joined-on" style="font-weight: bolder;">Date joined:</label>
 						<input type="text" id="joined-on" name="joined-on" value="10/10/2023" readonly>
 					</div>
@@ -292,8 +337,8 @@ outline: none;
 					<div class="list-box d-flex flex-column align-items-center" style="margin-left: 1%;">
 
 						<div class="content">
-						 <label  style="font-size:150%; font-weight: bolder;">Sara</label>
-						 <h5 class="pink-text">12+</h5>
+						 <label  style="font-size:230%; font-weight: bolder;">@Sarah</label>
+						 <h4 class="pink-text">12+</h4>
 						</div>
 					</div>
 				</div>
@@ -319,7 +364,6 @@ outline: none;
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li>Riyadh, Saudi Arabia.</li>
 							<li>support@gamegeek.com</li>
 							<li>+00 111 222 3333</li>
 						</ul>
