changes in profile

--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -97,7 +97,7 @@
     border-radius: 3% 0 0 3%; /* Apply different radius on the right */
     margin-left: 0; /* Remove left margin */
 	padding-top: 5%;
-	padding-left: 2%;
+	padding-left:-2%;
 	    box-shadow: none;
 
 
@@ -191,8 +191,8 @@
 	order: 2; /* Set the order to 2 to place it on the right */
     width: 1px; /* Width of the vertical line */
     background-color: #ff069a; /* Color of the vertical line */
-    margin: 0 ;
-	margin-right: 10%;
+    margin-left: -10% ;
+	margin-right: 1%;
 }
 	</style>
 
@@ -291,10 +291,8 @@
                     <div class="col-lg-8 offset-lg-2 text-center">
                         <div class="breadcrumb-text">
                             <h1>Profile</h1>
-							<p>
-							<span class="blue">Gamer's</span>
-							<span class="pink">information</span>
-						</p>
+							 <p>Gamer's information</p>
+
                         </div>
                     </div>
                 </div>
@@ -364,6 +362,7 @@
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
+							<li>Riyadh, Saudi Arabia.</li>
 							<li>support@gamegeek.com</li>
 							<li>+00 111 222 3333</li>
 						</ul>
