--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -291,7 +291,10 @@
                     <div class="col-lg-8 offset-lg-2 text-center">
                         <div class="breadcrumb-text">
                             <h1>Profile</h1>
-							 <p>Gamer's information</p>
+							<p>
+							<span class="blue">Gamer's</span>
+							<span class="pink">information</span>
+						</p>
 
                         </div>
                     </div>
