--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -47,11 +47,11 @@
     display: flex;
     justify-content: center; /* Center the content horizontally */
     align-items: center; /* Center the content vertically */
-    margin: 0 auto; /* Center the section horizontally */
+    margin: 5% auto; /* Center the section horizontally */
     max-width: 50%; /* Limit maximum width for two containers side by side */
     border-radius: 3%;
 }
-
+]
 .profile-container {
     text-align: center;
     padding: 20px;
@@ -64,6 +64,7 @@
     flex-wrap: wrap;
     justify-content: center; /* Center the content horizontally */
     align-items: center; /* Center the content vertically */
+
 }
 
 /* Your styles for the content inside each profile container */
@@ -87,6 +88,7 @@
     border-radius: 0 3% 3% 0; /* Apply different radius on the left */
     margin-right: 0; /* Remove right margin */
 	    box-shadow: none;
+
 
 
 }
@@ -131,6 +133,7 @@
   align-items: center;
   margin-bottom: 10px; /* Add space between input containers */
 
+
 }
 
 .input-container input {
@@ -173,6 +176,7 @@
         font-weight: bolder;
         margin-right: 10px;
         font-size: larger;
+
     }
 
     /* Add responsive styles */
@@ -189,10 +193,16 @@
 
 	.separator {
 	order: 2; /* Set the order to 2 to place it on the right */
-    width: 1px; /* Width of the vertical line */
-    background-color: #ff069a; /* Color of the vertical line */
+    width: 6px; /* Width of the vertical line */
+   background: rgb(21,232,237);
+background: linear-gradient(95deg, rgba(21,232,237,1) 0%, rgba(180,175,175,0.5032606792717087) 52%, rgba(255,6,154,1) 100%);
     margin-left: -10% ;
 	margin-right: 1%;
+}.content label{
+margin:auto 100% auto -30%;}
+
+			.content h5{
+margin-left:-70% ;
 }
 	</style>
 
@@ -307,6 +317,7 @@
 <br>
 
 
+
 				<div class="profile-sec">
 			<section class="d-flex">
 				<div class="profile-container labels-container">
@@ -324,7 +335,7 @@
 
 					<div class="input-container-read">
 						<label for="email" style="font-weight: bolder;">Email:</label>
-						<input type="text" id="email" name="email" value="sarah@mail.com" readonly>
+						<input type="text" id="email" name="email" value="sara@mail.com" readonly>
 					</div>
 
 					<div class="input-container-read">
@@ -335,12 +346,13 @@
 		        <div class="separator"></div> <!-- Add this separator element -->
 
 				<div class="profile-container user-info-container">
-					<div class="list-box d-flex flex-column align-items-center" style="margin-left: 1%;">
+
 
 						<div class="content">
-						 <label  style="font-size:230%; font-weight: bolder;">@Sarah</label>
-						 <h4 class="pink-text">12+</h4>
-						</div>
+						 <label  style="font-size:230%; font-weight: bolder;">@Sara</label>
+
+						 <h5 class="pink-text"> Age group:17+</h5>
+
 					</div>
 				</div>
 
