social media accounts

--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -289,8 +289,21 @@ height:20%;}
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li>support@gamegeek.com</li>
-							<li>+00 111 222 3333</li>
+							<li><a href="mailto:support@gamegeek.com" class="mail">
+								<i class="fas fa-envelope"></i>&#160;&#160;GameGeekWebsite@gmail.com
+							</a></li>
+							<li>
+								<a href="https://www.instagram.com/Game_Geek2023" target="_blank">
+								  <i class="fab fa-instagram"></i>&#160;&#160; Game_Geek2023
+								</a>
+							</li>
+							<li>
+								<a href="https://www.X.com/Game_Geek2023" target="_blank">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" version="1.1" width="13" height="13" class="X">
+									<path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="white"/>
+									</svg>&#160;&#160; <span style="position: relative; top: 2px;">Game_Geek2023</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
