modifying log in , sign up and age

--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -39,8 +39,8 @@
                   #main-content{
                   margin:auto;
 height:107%;
-background: rgb(255,6,154);
-background: linear-gradient(273deg, rgba(255,6,154,1) 0%, rgba(21,232,237,1) 40%, rgba(168,168,168,0.02006740196078427) 100%);
+background: rgb(21,22,51);
+background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
      }
 
     .top-header-area {
