--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -54,12 +54,10 @@
 
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */}
-.back{
-height:102%;
-margin:0;
-margin-top:-12%;
-background: rgb(21,232,237);
-background: linear-gradient(95deg, rgba(21,232,237,1) 0%, rgba(168,168,168,0.02006740196078427) 52%, rgba(255,6,154,1) 100%);
+.hero-area{
+
+background: rgb(21,22,51);
+background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
 		}
 
 
@@ -70,8 +68,8 @@ background: linear-gradient(95deg, rgba(21,232,237,1) 0%, rgba(168,168,168,0.020
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     text-align: center;
 
-    width: 50%; /* Reduce the width of the form */
-    margin: 13% auto; /* Adjust vertical margin */
+    width: 60%; /* Reduce the width of the form */
+    margin: 3% auto; /* Adjust vertical margin */
 }
 
 
@@ -146,6 +144,36 @@ padding:10px;
 
 }
 
+		.animate-charcter {
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+	#ff069a 29%,
+    #06f7ff 67%,
+    #fff 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+  font-size: 80px;
+  letter-spacing: 20px;
+  line-height: 1.5;
+  margin:auto;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
 
 
 
@@ -171,9 +199,28 @@ padding:10px;
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-								<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-								</a>
-							</div>
+							<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo" width="300px" height="120px">
+							</a>
+						</div>
+
+						<!-- menu start -->
+						<nav class="main-menu">
+							<ul>
+
+								<li>
+									<div class="header-icons">
+
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}" style="font-size: 20px;">Home</a>
+									</div>
+								</li>
+							</ul>
+						</nav>
+						<!-- menu end -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 						<!-- logo -->
 
 						<!-- menu start -->
@@ -201,33 +248,30 @@ padding:10px;
 	<!-- end header -->
 
 	<!-- search area -->
-	
+	<div class="hero-area hero-bg" style="background-size: 120%;">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-9 offset-lg-2 text-center">
+					<div class="hero-text">
+						<div class="hero-text-tablecell">
+							<p class="subtitle"></p>
 	<!-- end search arewa -->
 	
 	<!-- breadcrumb-section -->
-	<div class="breadcrumb-section breadcrumb-bg">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2 text-center">
-					<div class="breadcrumb-text">
 
-						<h1>Sign Up</h1>
-						<p>
-							<span class="blue">Join </span>
-							<span class="black">the team</span>
-
-							<span class="pink"> now</span></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<!-- end breadcrumb section -->
 
 	<!-- contact form -->
-	<div class="back">
+
 	<div class="contact-from-section mt-150 mb-150">
 		<div class="container">
+			<div class="containeTitle">
+								<div class="rowTitle">
+								  <div class="col-md-12 text-center">
+									<h3 class="animate-charcter">Sign Up</h3>
+								  </div>
+								</div>
+							  </div>
     <div class="form-container">
 <form action="{% url 'estimate' %}" method="POST">
     {% csrf_token %}
@@ -266,7 +310,14 @@ padding:10px;
     </div>
 </div>
 	</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
+	</div>
+
+
 	<!-- end contact form -->
 
 
