--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -157,6 +157,12 @@
 						</p>
 					</div>
 				</div>
+				<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'signup' %}" >Sign Up</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'about' %}">About Us</a></li>
+				  </ul>
 			</div>
 		</div>
 	</div>
