--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -129,13 +129,15 @@
 						<span class="blue">Get</span>
 							<span class="black"> 24/7</span>
 							<span class="pink">Support</span>
-
-
-
-
 						</p>
 					</div>
 				</div>
+				<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'signup' %}" >Sign Up</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'contact' %}">Contact Us</a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
