--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>Sign Up</title>
+	<title>Log In</title>
 
 	<!-- favicon -->
 
