--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -37,7 +37,7 @@
 
 		<style>
 
-  /************/
+  /**/
  body{
     background-color: #fff;
   }
@@ -196,14 +196,34 @@
     width: 6px; /* Width of the vertical line */
    background: rgb(21,232,237);
 background: linear-gradient(95deg, rgba(21,232,237,1) 0%, rgba(180,175,175,0.5032606792717087) 52%, rgba(255,6,154,1) 100%);
-    margin-left: -10% ;
-	margin-right: 1%;
-}.content label{
-margin:auto 100% auto -30%;}
+    margin-left: -35% ;
+	margin-right: 2%;
+}
+.content label{
+margin-left: 0%;
+margin-right: 100%;
+padding-right: 20%;
+padding-left: -15%;
+}
 
 			.content h5{
-margin-left:-70% ;
+margin-left:-5% ;
+margin-right:55%;
 }
+
+			#username{
+			margin-right: 100%;
+			margin-left: -80%;
+
+			}
+
+			#age{
+			margin-right: 100%;
+			margin-left: -70%;
+
+			}
+
+
 	</style>
 
 	<style>
@@ -305,10 +325,14 @@ margin-left:-70% ;
 							<span class="blue">Gamer's</span>
 							<span class="pink">information</span>
 						</p>
-
                         </div>
                     </div>
-                </div>
+					<ul class="Realbreadcrumb">
+						<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+						<li class="breadcrumb-item"><a href="{% url 'signup' %}" >Sign Up</a></li>
+						<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
+						<li class="breadcrumb-item current"><a href="{% url 'profile' %}">Profile</a></li>
+					  </ul>                </div>
             </div>
         </div>
         <!-- end breadcrumb section -->
@@ -324,12 +348,12 @@ margin-left:-70% ;
 
 					<div class="input-container">
 						<label for="Fname" style="font-weight: bolder;">First Name:</label>
-						<input type="text" id="Fname" name="Fname" value="Sarah">
+						<input type="text" id="Fname" name="Fname" value="">
 					</div>
 
 						<div class="input-container">
 						<label for="Lname" style="font-weight: bolder;">Last Name:</label>
-						<input type="text" id="Lname" name="Lname" value="Ali" >
+						<input type="text" id="Lname" name="Lname" value="" >
 
 					</div>
 
@@ -345,16 +369,16 @@ margin-left:-70% ;
 				</div>
 		        <div class="separator"></div> <!-- Add this separator element -->
 
-				<div class="profile-container user-info-container">
-
-
-						<div class="content">
-						 <label  style="font-size:230%; font-weight: bolder;">@Sara</label>
-
-						 <h5 class="pink-text"> Age group:17+</h5>
-
-					</div>
-				</div>
+							   <div class="profile-container user-info-container">
+            <div class="list-box d-flex flex-column align-items-center" style="margin-left: -70%;">
+                <div class="content">
+                    <label for="username" style="font-weight: bolder;  padding-right:20%; padding-left: 15%; font-size:large;">Username:</label>
+                    <h4 style="font-size: 230%; font-weight: bolder;  " class="pink-text" >sara</h4>
+                    <label for="age-group" style="font-weight: bolder; font-size:large; margin-left:20%">Age-Group:</label>
+                    <h4 class="pink-text" style="font-size: 200%; padding-bottom:10%;" >17+</h4>
+                </div>
+            </div>
+        </div>
 
 			</section>
 		</div>
